[package]
name = "tokio-serde-cbor"
version = "0.3.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Integration of serde_cbor into tokio-io, to allow sending CBOR encoded frames across network (and possibly through other transports)."
documentation = "https://docs.rs/tokio-serde-cbor"
repository = "https://github.com/vorner/tokio-serde-cbor"
readme = "README.md"
keywords = ["cbor", "tokio", "framing"]
categories = ["asynchronous", "network-programming"]
license = "Apache-2.0/MIT"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "vorner/tokio-serde-cbor" }
appveyor = { repository = "vorner/tokio-serde-cbor" }

[dependencies]
bytes = "~0.4"
serde = "~1"
serde_cbor = "~0.9"
tokio-io = "~0.1"

[dev-dependencies]
tokio    = "~0.1"
tokio-codec = "0.1.1"
tokio-uds   = "*"
