[package]
name = "tokio-serde-cbor"
version = "0.3.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Integration of serde_cbor into tokio-io, to allow sending CBOR encoded frames across network (and possibly through other transports)."
documentation = "https://docs.rs/tokio-serde-cbor"
repository = "https://github.com/vorner/tokio-serde-cbor"
readme = "README.md"
keywords = ["cbor", "tokio", "framing"]
categories = ["asynchronous", "network-programming"]
license = "Apache-2.0/MIT"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "vorner/tokio-serde-cbor" }
appveyor = { repository = "vorner/tokio-serde-cbor" }

[dependencies]
bytes = "~0.4"
serde = "~1"
serde_cbor = "~0.10"
tokio-io = "~0.1"
futures_codec = { version = "~0.2", optional = true }

[dev-dependencies]
tokio = "~0.1"
runtime = "~0.3.0-alpha"
futures-preview = "=0.3.0-alpha.17"

