[package]
name = "tokio-serde-cbor"
version = "0.4.0"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Vadym S. Khondar <vadym@khondar.name>",
]
description = "Integration of serde_cbor into tokio-io, to allow sending CBOR encoded frames across network (and possibly through other transports)."
documentation = "https://docs.rs/tokio-serde-cbor"
repository = "https://github.com/vorner/tokio-serde-cbor"
readme = "README.md"
keywords = ["cbor", "tokio", "framing"]
categories = ["asynchronous", "network-programming"]
license = "Apache-2.0/MIT"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "vorner/tokio-serde-cbor" }
appveyor = { repository = "vorner/tokio-serde-cbor" }

[dependencies]
bytes = "~0.5"
serde = "~1"
serde_cbor = "~0.11.1"
tokio-util = { version = "~0.2", features = ["codec"] }

[dev-dependencies]
futures = "~0.3"
tokio = { version = "~0.2", features = ["dns", "macros", "rt-core", "tcp"] }
